# Research-Enterprise-Synth-API

./: BLOG.md  CITATION.cff  DESIGN_DOC.md  PAPER.md  README.md  REPRODUCIBILITY.md  RESULTS.md  Research Paper Presentation Slides.pptx  pyproject.toml  requirement.txt  requirements.txt
data/: README.md
data/specs/: digitalocean.json  slack.json
paper/: Research Paper Presentation Slides (1).pptx  main.tex  main_aaai.tex  main_aaai27.tex  references.bib
scripts/: build_aaai_paper.py  make_figures.py  make_pipeline_diagram.py  prepare_experiment5_data.py  run_ablation_study.py  run_baseline_selfinstruct.py  run_baseline_selfinstruct_finetune.py  run_experiment1.py  run_experiment4.py  run_experiment5.py  scale_experiment5_heldout.py
src/enterprisesynth/: ablation_agents.py  finetune.py  parser.py  schemas.py  verifier.py
tests/: test_finetune.py  test_llm_agents.py  test_parser.py  test_verifier.py
